<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_skin8"
    android:onClick="onPressToPay"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.foodline.controller.PaymentFoodLinePage"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/LinearLayout1_8b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textView1_10b"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_text_field_payment_page_10"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText1_10b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:minHeight="100dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button1_10b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onPressToPay"
            android:text="@string/payment_button_page_10"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2_10b"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/current_order_text_field_payment_page_10"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>